# blue-codec

./: .gitignore  LICENSE  README.md  dataset.py  pyproject.toml  train_autoencoder.py  utils.py
assets/: TechnicalReport.md
config/: tts.json
docs/: stage1_autoencoder.md  training.md
examples/: basic.py
src/bluecodec/: __init__.py  utils.py
src/bluecodec/autoencoder/: README.md  discriminators.py  latent_decoder.py  latent_encoder.py  modules.py  vocoder.py
utils/: audio_utils.py
