[project]
name = "bluecodec"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "soundfile",
    "tqdm",
    "tensorboard",
]

[project.optional-dependencies]
cu128 = [
    "torch",
    "torchaudio",
]
cu132 = [
    "torch",
    "torchaudio",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "extra == 'cu128'" },
    { index = "pytorch-cu132", marker = "extra == 'cu132'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "extra == 'cu128'" },
    { index = "pytorch-cu132", marker = "extra == 'cu132'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
